--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>My project</title>
 </head>
 <body>
- <header></header>
+ <header>My program</header>
  <main></main>
- <footer></footer>
- 
+ <footer>Hello Software!</footer>
 </body>
 </html>
