--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My project</title>
+    <title></title>
 </head>
 <body>
- <header>My program</header>
+    <h1>Mate Academy</h1>
+    <ul>
+        <li>Vermelho</li> "Vermelho": unknown word
+        <li>Verde</li> 
+        <li>Azul</li> "Azul": unknown word
+        <li>Branco</li> "Branco": unknown word
+    </ul>
+
+ <header></header>
  <main></main>
- <footer>Hello Software!</footer>
+ <footer></footer>
 </body>
 </html>
